--- a/EiTests/EiTests.csproj
+++ b/EiTests/EiTests.csproj
@@ -4,12 +4,19 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <RootNamespace>Com.Setarit.EiTests</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="nunit" Version="3.11.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.11.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Factory\" />
+    <Folder Include="Provider\" />
   </ItemGroup>
 
 </Project>
