--- a/Ei/Ei.csproj
+++ b/Ei/Ei.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Factory\" />
+    <PackageReference Include="RestSharp" Version="106.6.8" />
   </ItemGroup>
 
 </Project>
